{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 46,
  "lineage": "6e6e52b5-fd34-1154-164e-ecb774884250",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_egress_only_internet_gateway",
      "name": "eigw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eigw-01a10d0fcb4f145ae",
            "tags": {
              "Name": "xct-dev-eigw"
            },
            "tags_all": {
              "Name": "xct-dev-eigw",
              "environment": "dev",
              "terraform-managed": "true"
            },
            "vpc_id": "vpc-005ead1918c1769fd"
          },
          "dependencies": [
            "aws_vpc.xct_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09becb0347d102460",
            "arn": "arn:aws:ec2:eu-west-1:940270583521:elastic-ip/eipalloc-09becb0347d102460",
            "association_id": "eipassoc-0b8074ebf3212021a",
            "domain": "vpc",
            "id": "eipalloc-09becb0347d102460",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-0cc4b35dea9e1495d",
            "private_dns": "ip-10-0-0-210.eu-west-1.compute.internal",
            "private_ip": "10.0.0.210",
            "public_dns": "ec2-52-48-172-112.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.48.172.112",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "environment": "dev",
              "terraform-managed": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.xct_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:940270583521:internet-gateway/igw-064979ba64b9613f5",
            "id": "igw-064979ba64b9613f5",
            "owner_id": "940270583521",
            "tags": {
              "Name": "xct-dev-igw"
            },
            "tags_all": {
              "Name": "xct-dev-igw",
              "environment": "dev",
              "terraform-managed": "true"
            },
            "vpc_id": "vpc-005ead1918c1769fd"
          },
          "dependencies": [
            "aws_vpc.xct_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09becb0347d102460",
            "association_id": "eipassoc-0b8074ebf3212021a",
            "connectivity_type": "public",
            "id": "nat-0e80a138014da6f5f",
            "network_interface_id": "eni-0cc4b35dea9e1495d",
            "private_ip": "10.0.0.210",
            "public_ip": "52.48.172.112",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b246f4358609a121",
            "tags_all": {
              "environment": "dev",
              "terraform-managed": "true"
            }
          },
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.gw",
            "aws_subnet.public_a_subnet",
            "aws_vpc.xct_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "data_subnets_nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:940270583521:network-acl/acl-024844a38d2c5d7b9",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "2a05:d018:1836:ed00::/56",
                "protocol": "-1",
                "rule_no": 200,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 32768,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "6",
                "rule_no": 400,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "6",
                "rule_no": 700,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 53,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "17",
                "rule_no": 900,
                "to_port": 53
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 32768,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 300,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 600,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 53,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "17",
                "rule_no": 800,
                "to_port": 53
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 500,
                "to_port": 80
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-024844a38d2c5d7b9",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "2a05:d018:1836:ed00::/56",
                "protocol": "-1",
                "rule_no": 200,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 32768,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "17",
                "rule_no": 800,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 32768,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "6",
                "rule_no": 600,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 32768,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "17",
                "rule_no": 700,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 32768,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 500,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              },
              {
                "action": "deny",
                "cidr_block": "",
                "from_port": 1433,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "6",
                "rule_no": 400,
                "to_port": 1433
              },
              {
                "action": "deny",
                "cidr_block": "0.0.0.0/0",
                "from_port": 5432,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 300,
                "to_port": 5432
              }
            ],
            "owner_id": "940270583521",
            "subnet_ids": [
              "subnet-001225e05beddf92b",
              "subnet-061a2c9e17a49c0ce",
              "subnet-0947bce0fb8ba589e"
            ],
            "tags": {
              "Name": "xct-dev-data-subnets-nacl"
            },
            "tags_all": {
              "Name": "xct-dev-data-subnets-nacl",
              "environment": "dev",
              "terraform-managed": "true"
            },
            "vpc_id": "vpc-005ead1918c1769fd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.data_a_subnet",
            "aws_subnet.data_b_subnet",
            "aws_subnet.data_c_subnet",
            "aws_vpc.xct_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private_subnets_nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:940270583521:network-acl/acl-0193857c1e9407639",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 200,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0193857c1e9407639",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "17",
                "rule_no": 500,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "6",
                "rule_no": 300,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "17",
                "rule_no": 400,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 200,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "940270583521",
            "subnet_ids": [
              "subnet-03497502d30eb9073",
              "subnet-05b52498de97661c9",
              "subnet-08e2538de2ad527f7"
            ],
            "tags": {
              "Name": "xct-dev-private-subnets-nacl"
            },
            "tags_all": {
              "Name": "xct-dev-private-subnets-nacl",
              "environment": "dev",
              "terraform-managed": "true"
            },
            "vpc_id": "vpc-005ead1918c1769fd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.private_a_subnet",
            "aws_subnet.private_b_subnet",
            "aws_subnet.private_c_subnet",
            "aws_vpc.xct_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public_subnets_nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:940270583521:network-acl/acl-0be616c54cf17df06",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 200,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0be616c54cf17df06",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 200,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "940270583521",
            "subnet_ids": [
              "subnet-05364558ae22a900c",
              "subnet-0b246f4358609a121",
              "subnet-0c9e88ad981c83abe"
            ],
            "tags": {
              "Name": "xct-dev-public-subnets-nacl"
            },
            "tags_all": {
              "Name": "xct-dev-public-subnets-nacl",
              "environment": "dev",
              "terraform-managed": "true"
            },
            "vpc_id": "vpc-005ead1918c1769fd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.public_a_subnet",
            "aws_subnet.public_b_subnet",
            "aws_subnet.public_c_subnet",
            "aws_vpc.xct_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "data",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:940270583521:route-table/rtb-0beb4660e37aacd78",
            "id": "rtb-0beb4660e37aacd78",
            "owner_id": "940270583521",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "eigw-01a10d0fcb4f145ae",
                "gateway_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e80a138014da6f5f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "xct-dev-data-rtb"
            },
            "tags_all": {
              "Name": "xct-dev-data-rtb",
              "environment": "dev",
              "terraform-managed": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-005ead1918c1769fd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_egress_only_internet_gateway.eigw",
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat_gw",
            "aws_subnet.public_a_subnet",
            "aws_vpc.xct_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:940270583521:route-table/rtb-0f5ccbb303038473f",
            "id": "rtb-0f5ccbb303038473f",
            "owner_id": "940270583521",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "eigw-01a10d0fcb4f145ae",
                "gateway_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e80a138014da6f5f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "xct-dev-private-rtb"
            },
            "tags_all": {
              "Name": "xct-dev-private-rtb",
              "environment": "dev",
              "terraform-managed": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-005ead1918c1769fd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_egress_only_internet_gateway.eigw",
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat_gw",
            "aws_subnet.public_a_subnet",
            "aws_vpc.xct_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:940270583521:route-table/rtb-068b47d90ac8f4600",
            "id": "rtb-068b47d90ac8f4600",
            "owner_id": "940270583521",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-064979ba64b9613f5",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-064979ba64b9613f5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "xct-dev-public-rtb"
            },
            "tags_all": {
              "Name": "xct-dev-public-rtb",
              "environment": "dev",
              "terraform-managed": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-005ead1918c1769fd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.xct_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "data_a_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08ed5d71c382b55b9",
            "route_table_id": "rtb-0beb4660e37aacd78",
            "subnet_id": "subnet-001225e05beddf92b"
          },
          "dependencies": [
            "aws_egress_only_internet_gateway.eigw",
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.data",
            "aws_subnet.data_a_subnet",
            "aws_subnet.public_a_subnet",
            "aws_vpc.xct_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "data_b_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0762745261749c58e",
            "route_table_id": "rtb-0beb4660e37aacd78",
            "subnet_id": "subnet-0947bce0fb8ba589e"
          },
          "dependencies": [
            "aws_egress_only_internet_gateway.eigw",
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.data",
            "aws_subnet.data_b_subnet",
            "aws_subnet.public_a_subnet",
            "aws_vpc.xct_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "data_c_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fb386e58ca9f8fb8",
            "route_table_id": "rtb-0beb4660e37aacd78",
            "subnet_id": "subnet-061a2c9e17a49c0ce"
          },
          "dependencies": [
            "aws_egress_only_internet_gateway.eigw",
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.data",
            "aws_subnet.data_c_subnet",
            "aws_subnet.public_a_subnet",
            "aws_vpc.xct_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03e5692558501ad71",
            "route_table_id": "rtb-0f5ccbb303038473f",
            "subnet_id": "subnet-03497502d30eb9073"
          },
          "dependencies": [
            "aws_egress_only_internet_gateway.eigw",
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private",
            "aws_subnet.private_a_subnet",
            "aws_subnet.public_a_subnet",
            "aws_vpc.xct_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_b_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ed41ce364d2586c8",
            "route_table_id": "rtb-0f5ccbb303038473f",
            "subnet_id": "subnet-05b52498de97661c9"
          },
          "dependencies": [
            "aws_egress_only_internet_gateway.eigw",
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private",
            "aws_subnet.private_b_subnet",
            "aws_subnet.public_a_subnet",
            "aws_vpc.xct_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_c_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01522fa5f652eda59",
            "route_table_id": "rtb-0f5ccbb303038473f",
            "subnet_id": "subnet-08e2538de2ad527f7"
          },
          "dependencies": [
            "aws_egress_only_internet_gateway.eigw",
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private",
            "aws_subnet.private_c_subnet",
            "aws_subnet.public_a_subnet",
            "aws_vpc.xct_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-097dc946170ac087d",
            "route_table_id": "rtb-068b47d90ac8f4600",
            "subnet_id": "subnet-0b246f4358609a121"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public_a_subnet",
            "aws_vpc.xct_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0af89fc8fb2530a9d",
            "route_table_id": "rtb-068b47d90ac8f4600",
            "subnet_id": "subnet-05364558ae22a900c"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public_b_subnet",
            "aws_vpc.xct_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_c_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0820e90412e77704b",
            "route_table_id": "rtb-068b47d90ac8f4600",
            "subnet_id": "subnet-0c9e88ad981c83abe"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public_c_subnet",
            "aws_vpc.xct_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "data_a_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:940270583521:subnet/subnet-001225e05beddf92b",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.64.0/21",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-001225e05beddf92b",
            "ipv6_cidr_block": "2a05:d018:1836:ed08::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-07c4e7d4c4f917d3a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "940270583521",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "data-a-subnet",
              "type": "data"
            },
            "tags_all": {
              "Name": "data-a-subnet",
              "environment": "dev",
              "terraform-managed": "true",
              "type": "data"
            },
            "vpc_id": "vpc-005ead1918c1769fd"
          },
          "dependencies": [
            "aws_vpc.xct_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "data_b_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:940270583521:subnet/subnet-0947bce0fb8ba589e",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.72.0/21",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0947bce0fb8ba589e",
            "ipv6_cidr_block": "2a05:d018:1836:ed09::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-04f489815283c2716",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "940270583521",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "data-b-subnet",
              "type": "data"
            },
            "tags_all": {
              "Name": "data-b-subnet",
              "environment": "dev",
              "terraform-managed": "true",
              "type": "data"
            },
            "vpc_id": "vpc-005ead1918c1769fd"
          },
          "dependencies": [
            "aws_vpc.xct_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "data_c_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:940270583521:subnet/subnet-061a2c9e17a49c0ce",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.80.0/21",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-061a2c9e17a49c0ce",
            "ipv6_cidr_block": "2a05:d018:1836:ed0a::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-01d4a2b01a361a4f8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "940270583521",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "data-c-subnet",
              "type": "data"
            },
            "tags_all": {
              "Name": "data-c-subnet",
              "environment": "dev",
              "terraform-managed": "true",
              "type": "data"
            },
            "vpc_id": "vpc-005ead1918c1769fd"
          },
          "dependencies": [
            "aws_vpc.xct_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:940270583521:subnet/subnet-03497502d30eb9073",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.32.0/21",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03497502d30eb9073",
            "ipv6_cidr_block": "2a05:d018:1836:ed04::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-014d3a5aabbab75b8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "940270583521",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-a-subnet",
              "kubernetes.io/role/internal-elb": "1",
              "type": "private"
            },
            "tags_all": {
              "Name": "private-a-subnet",
              "environment": "dev",
              "kubernetes.io/role/internal-elb": "1",
              "terraform-managed": "true",
              "type": "private"
            },
            "vpc_id": "vpc-005ead1918c1769fd"
          },
          "dependencies": [
            "aws_vpc.xct_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:940270583521:subnet/subnet-05b52498de97661c9",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.40.0/21",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05b52498de97661c9",
            "ipv6_cidr_block": "2a05:d018:1836:ed05::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0c243c77ae6293510",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "940270583521",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-b-subnet",
              "kubernetes.io/role/internal-elb": "1",
              "type": "private"
            },
            "tags_all": {
              "Name": "private-b-subnet",
              "environment": "dev",
              "kubernetes.io/role/internal-elb": "1",
              "terraform-managed": "true",
              "type": "private"
            },
            "vpc_id": "vpc-005ead1918c1769fd"
          },
          "dependencies": [
            "aws_vpc.xct_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_c_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:940270583521:subnet/subnet-08e2538de2ad527f7",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.48.0/21",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08e2538de2ad527f7",
            "ipv6_cidr_block": "2a05:d018:1836:ed06::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-002f760250838f7df",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "940270583521",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-c-subnet",
              "kubernetes.io/role/internal-elb": "1",
              "type": "private"
            },
            "tags_all": {
              "Name": "private-c-subnet",
              "environment": "dev",
              "kubernetes.io/role/internal-elb": "1",
              "terraform-managed": "true",
              "type": "private"
            },
            "vpc_id": "vpc-005ead1918c1769fd"
          },
          "dependencies": [
            "aws_vpc.xct_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:940270583521:subnet/subnet-0b246f4358609a121",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.0.0/21",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b246f4358609a121",
            "ipv6_cidr_block": "2a05:d018:1836:ed00::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-065daddc628547b72",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "940270583521",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-a-subnet",
              "kubernetes.io/role/elb": "1",
              "type": "public"
            },
            "tags_all": {
              "Name": "public-a-subnet",
              "environment": "dev",
              "kubernetes.io/role/elb": "1",
              "terraform-managed": "true",
              "type": "public"
            },
            "vpc_id": "vpc-005ead1918c1769fd"
          },
          "dependencies": [
            "aws_vpc.xct_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:940270583521:subnet/subnet-05364558ae22a900c",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.8.0/21",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05364558ae22a900c",
            "ipv6_cidr_block": "2a05:d018:1836:ed01::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-09de15fa33ef2382e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "940270583521",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-b-subnet",
              "kubernetes.io/role/elb": "1",
              "type": "public"
            },
            "tags_all": {
              "Name": "public-b-subnet",
              "environment": "dev",
              "kubernetes.io/role/elb": "1",
              "terraform-managed": "true",
              "type": "public"
            },
            "vpc_id": "vpc-005ead1918c1769fd"
          },
          "dependencies": [
            "aws_vpc.xct_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_c_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:940270583521:subnet/subnet-0c9e88ad981c83abe",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.16.0/21",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c9e88ad981c83abe",
            "ipv6_cidr_block": "2a05:d018:1836:ed02::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0dd8a4b15824d6736",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "940270583521",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-c-subnet",
              "kubernetes.io/role/elb": "1",
              "type": "public"
            },
            "tags_all": {
              "Name": "public-c-subnet",
              "environment": "dev",
              "kubernetes.io/role/elb": "1",
              "terraform-managed": "true",
              "type": "public"
            },
            "vpc_id": "vpc-005ead1918c1769fd"
          },
          "dependencies": [
            "aws_vpc.xct_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "xct_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:940270583521:vpc/vpc-005ead1918c1769fd",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e859624dfb8bee1b",
            "default_route_table_id": "rtb-0e1b9cb98dc0c46f1",
            "default_security_group_id": "sg-0af6fafc3bccb32e9",
            "dhcp_options_id": "dopt-fb0d4b9f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-005ead1918c1769fd",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-0589ac42cd2b790ad",
            "ipv6_cidr_block": "2a05:d018:1836:ed00::/56",
            "ipv6_cidr_block_network_border_group": "eu-west-1",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e1b9cb98dc0c46f1",
            "owner_id": "940270583521",
            "tags": {
              "Name": "xct-dev-vpc"
            },
            "tags_all": {
              "Name": "xct-dev-vpc",
              "environment": "dev",
              "terraform-managed": "true"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:940270583521:vpc-endpoint/vpce-0d26d5b22725a38b6",
            "cidr_blocks": [
              "3.5.64.0/21",
              "3.5.72.0/23",
              "52.92.0.0/17",
              "52.218.0.0/17"
            ],
            "id": "vpce-0d26d5b22725a38b6",
            "owner_id": "940270583521",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-6da54004",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-068b47d90ac8f4600",
              "rtb-0beb4660e37aacd78",
              "rtb-0f5ccbb303038473f"
            ],
            "service_name": "com.amazonaws.eu-west-1.s3",
            "state": "available",
            "tags": {
              "Name": "xct-dev-s3-vpce"
            },
            "tags_all": {
              "Name": "xct-dev-s3-vpce",
              "environment": "dev",
              "terraform-managed": "true"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-005ead1918c1769fd"
          },
          "dependencies": [
            "aws_egress_only_internet_gateway.eigw",
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.data",
            "aws_route_table.private",
            "aws_route_table.public",
            "aws_subnet.public_a_subnet",
            "aws_vpc.xct_vpc",
            "data.aws_region.current"
          ]
        }
      ]
    }
  ]
}